# BLENDER-MCP-CURSOR-

./: .gitignore  LICENSE  README.md  addon.py  main.py  mcp.json.example  pyproject.toml
src/blender_mcp/: cursor_integration.py  server.py
